# starknet-p2p-tests

./: Cargo.toml  LICENSE  README.md  docker-compose.yml  go.mod  go.sum  index.html  package-lock.json  package.json
.github/workflows/: debugging-sync.yml  kurtosis-e2e-tests.yml  push-dashboard-image.yml  run-integration-tests.yml  run-tests.yml
config/: config.go
dashboard/: .gitignore  Dockerfile  package-lock.json  package.json  vercel.json  vite.config.ts
dashboard/api/: index.js
dashboard/backend/: package-lock.json  package.json
dashboard/backend/src/: index.js
dashboard/frontend/: package-lock.json  package.json  tsconfig.app.json
dashboard/frontend/src/: types.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/components/: TestCard.tsx  TestDetails.tsx
dashboard/src/server/: index.js
e2e/: README.md  kurtosis.yml  main.star
e2e/clients/: base.star  juno.star  participants.star  pathfinder.star  pathfinder_identity.json
e2e/clients/common/: base.star
e2e/tester/: Dockerfile  config.mjs  index.mjs  nodeDetector.mjs  package-lock.json  package.json  reporter.mjs
e2e/tests/: sync_test.star
integration/: README.md  go.mod  go.sum
integration/config/: config.go
src/: App.tsx  lib.rs
src/components/: CompatibilityMatrix.tsx  TestCard.tsx  TestDetails.tsx
src/protocol/: starknet.rs
src/server/: index.js
src/tests/: mod.rs  tests_p2p.rs
src/tools/: mod.rs  synthetic_node.rs
tests/conformance/: discovery_test.go  getBlock_test.go
tests/performance/: framework.go  getBlocks_test.go
tools/: synthetic_node.go
(+17 files in other folders)
