[package]
name = "starknet-p2p-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53.2", features = [
    "autonat",
    "dcutr",
    "dns",
    "gossipsub",
    "identify",
    "kad",
    "macros",
    "noise",
    "ping",
    "relay",
    "request-response",
    "serde",
    "tcp",
    "tokio",
    "yamux",
] }

tokio = { version = "1.28.0", features = ["full", "test-util"] }
anyhow = "1.0"